<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.leanvision.normalkongkong.activity.WifiSettingActivity"
    tools:showIn="@layout/activity_wifi_setting">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_wifi_ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wifi_ssid"
        android:textSize="@dimen/text_size_medium"
        android:enabled="false"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="@dimen/text_size_medium" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_wifi_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_wifi_ssid"
        android:hint="@string/wif_pwd"
        android:textSize="@dimen/text_size_medium"
        app:met_clearButton="true"
        app:met_floatingLabel="highlight"
        app:met_floatingLabelTextSize="@dimen/text_size_medium" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/btn_bound"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/et_wifi_pwd"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/wifi_bound"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        app:pb_colorNormal="@color/colorPrimary"
        app:pb_colorPressed="@color/colorPrimaryDark" />

</RelativeLayout>
