<?xml version="1.0" encoding="utf-8"?><!-- 八个控件的总布局 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!-- 开关的布局 -->
        <RelativeLayout
            android:id="@+id/rl_hw_switch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_switch"
                android:layout_width="38dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/new_switch_off"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_switch_off"
                style="@style/s_font_small"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/iv_switch"
                android:text="@string/_close"
                android:textColor="@color/black"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_switch_on"
                style="@style/s_font_small"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/iv_switch"
                android:text="@string/_open"
                android:textColor="@color/black"
                android:visibility="visible" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c1c3c5" />

        <LinearLayout
            android:id="@+id/ll_hw_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:background="@drawable/new_clock" />

            <TextView
                style="@style/s_font_small"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/_timing"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c1c3c5" />
        <!-- 情景的布局 -->

        <LinearLayout
            android:id="@+id/ll_hw_meter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:background="@drawable/new_qingjing" />

            <TextView
                style="@style/s_font_small"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/_power"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c1c3c5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!-- 制冷的布局 -->

        <LinearLayout
            android:id="@+id/ll_hw_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_mode"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:background="@drawable/new_cold" />

            <TextView
                android:id="@+id/tv_mode"
                style="@style/s_font_small"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/_model"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c1c3c5" />
        <!-- 温度的布局 -->

        <LinearLayout
            android:id="@+id/ll_hw_temp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_temp"
                style="@style/s_font_medium"
                android:layout_gravity="center_horizontal"
                android:text="24℃"
                android:textColor="@color/black" />

            <TextView
                style="@style/s_font_small"
                android:layout_gravity="center_horizontal"
                android:text="@string/_temperature"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c1c3c5" />
        <!-- 风速的布局 -->

        <LinearLayout
            android:id="@+id/ll_hw_speed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_speed"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:background="@drawable/new_bigwind" />

            <TextView
                android:id="@+id/tv_speed"
                style="@style/s_font_small"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/_windSpeed"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#c1c3c5" />
        <!-- 风力的布局 -->

        <LinearLayout
            android:id="@+id/ll_hw_dire"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_dire"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:background="@drawable/new_wind_high" />

            <TextView
                android:id="@+id/tv_dire"
                style="@style/s_font_small"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="4dp"
                android:text="@string/_windDir"
                android:textColor="@color/black" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>